openturns/1.22/_sources/auto_data_analysis/manage_data_and_samples/index.rst.txt


.. _sphx_glr_auto_data_analysis_manage_data_and_samples:

.. _Manage data and samples:

Manage data and samples
-----------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Link Pandas and OpenTURNS">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sample_pandas_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Link Pandas and OpenTURNS</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Randomize the lines of a Sample">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_randomize_sample_lines_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_randomize_sample_lines.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Randomize the lines of a Sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import / export a sample via a CSV file">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_import_export_sample_csv_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_import_export_sample_csv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Import / export a sample via a CSV file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate moments from sample">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_estimate_moments_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate moments from sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sample manipulation">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sample_manipulation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_manipulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sample manipulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sort a sample">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sort_sample_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sort_sample.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sort a sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A quick start guide to the Point and Sample classes">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_quick_start_point_and_sample_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_quick_start_point_and_sample.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">A quick start guide to the Point and Sample classes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Wilks and empirical quantile">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_quantile_estimation_wilks_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_quantile_estimation_wilks.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Wilks and empirical quantile</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Build and validate a linear model">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_linear_regression_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_linear_regression.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Build and validate a linear model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate correlation coefficients">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sample_correlation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_correlation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate correlation coefficients</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_data_analysis/manage_data_and_samples/plot_sample_pandas
   /auto_data_analysis/manage_data_and_samples/plot_randomize_sample_lines
   /auto_data_analysis/manage_data_and_samples/plot_import_export_sample_csv
   /auto_data_analysis/manage_data_and_samples/plot_estimate_moments
   /auto_data_analysis/manage_data_and_samples/plot_sample_manipulation
   /auto_data_analysis/manage_data_and_samples/plot_sort_sample
   /auto_data_analysis/manage_data_and_samples/plot_quick_start_point_and_sample
   /auto_data_analysis/manage_data_and_samples/plot_quantile_estimation_wilks
   /auto_data_analysis/manage_data_and_samples/plot_linear_regression
   /auto_data_analysis/manage_data_and_samples/plot_sample_correlation

